--- a/css/style.css
+++ b/css/style.css
@@ -5,5 +5,5 @@
 
 body {
     text-align: center;
-    background-image: url(/img/animal_gomafu_azarashi.png);
+    background-image: url(../img/animal_gomafu_azarashi.png);
 }
